--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,19 +1,19 @@
 @import "tailwindcss";
+@import '@fontsource-variable/jetbrains-mono';
+@import '@fontsource-variable/manrope';
 
 :root {
   --background: #f8f8f8;
-  --foreground: #222222;
+  --foreground: #262626;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: 'JetBrains Mono Variable', monospace;
+  font-family: 'Manrope Variable', sans-serif;
 }
